demo-dashboard/elements/happymap-master/k8s/happymap-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: happymap-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        role: happymap-web
        app: happymap
    spec:
      containers:
      - name: happymap-web
        image: registry.cluster.gsi.dit.upm.es/sefarad/happymap:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - name: web
            containerPort: 8080
