demo-dashboard/elements/happymap-master/k8s/happymap-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: happymap-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: happymap.cluster.gsi.dit.upm.es
    http:
      paths:
      - path: /
        backend:
          serviceName: happymap-web
          servicePort: 8080
